Fixed Members Wrapping on Mobile
Fixed mobile wrapping of role, edit, and delete functions.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -187,6 +187,7 @@ html, body, body > div:first-of-type {
   display: flex;
   flex-direction: row;
   position: relative;
+  flex-wrap: wrap;
 }
 
 .users-wrapper .user-div .user-actions {
